@@ -5,17 +5,19 @@ DIST pyaudio-0.2.3.tar.gz 193280 SHA256 99259226169e91cc01c3c17eeb6c245e2ec2e015
 DIST pyaudio-0.2.4.tar.gz 80308 SHA256 3c3b6cc76116ddf688e658c41363f63590762c411dad43beebd04f908d52048e SHA512 a7718443204144ffc7110f340aaf6f10e4f770632f76e9ca4af00fcab272a73cffac983da1adf762c3358fac009a51d55913509b3d0eb257c87eb3199b5f8328 WHIRLPOOL ae73c1fc2fa8f9c7227d970b72960fabcd4e45525e378b5562d09f4a06688505926e61681cce14365f6f211b7c396d09229bd5f3100e2ae0a62fdb003d76b2db
 DIST pyaudio-0.2.6.tar.gz 81084 SHA256 fedf6812fa3e27d01a40036f0f58c0ab73ee78e23bb6095de70139b96e3dbb5d SHA512 0b9188670afeaee22b2e325e54aafcf1e409ed63e49a597be76be52dc75470c83029e8c92af768cf9ebae0d3406af6281d1177075d887774b8b9092b9d21c58e WHIRLPOOL b5961cb4dd93c4f2092409455f0182f557d32d7d40351bc4cdb22c0cef2ac787d3c90775df7b696e38eab4cbcedfe3f3f3f0592795182e2cfc2a3c1e5544c735
 DIST pyaudio-0.2.7.tar.gz 182396 SHA256 7807cf937df3652f64b014b9f579c308cf87057d32ed4250a6b28844e2b56287 SHA512 824b427e380f44ae28f43edc4d3c21660171e24448a9f95ff22fbc496548e17543df012dc712e54ea92b60d310a9d34885f2056af14287a4b7c30200789570fe WHIRLPOOL f974bd7c9dcb409cbdc0cba4391a567b639d163b6c5c74621b81b87da52afcc1c252f4ca3df6fb1d4d1bff442910ad036afd2ed3700336e9d5d26480d77b41e9
+DIST pyaudio-0.2.8.tar.gz 235900 SHA256 4f85367cf79657616684487037957ac38582ecc5389b89420fe61d901b719551 SHA512 af85291932809ceb966d1ace3c866cb6ac7e039b936ca35be668d4a3dc78c53e516070902d35fa6c829b37db376b8b512dc926ff1079e039809cae067be93069 WHIRLPOOL dae98752b6b885ce6f5247b9914fc9fcfd6264030c5f57c7276c6468de79ffdf30ea6196325ab0ff34b6997157ab97f6068ffa6ee27e137bab96c1589723550d
 EBUILD pyaudio-0.2.3.ebuild 636 SHA256 a949c70e222d0973ee500b27c9086b2329760db4fb3513c642ed27dc2972bcd7 SHA512 ad44281627a233b043d8fc011f0047226ddd8afb84ff254ee7f132199a72ef999c67403a6fb4ef9b994904db0b3711607c093cbff2b91e212f6bf1992e5062c7 WHIRLPOOL 6a094c71114078e51425da6a5c6804384ee82d31d005d04b86e7e5f2dd608e534cb30b0e44a22e2dbe0cc14a06f88d0c00fce45471b23a2fe43a380453f2d154
 EBUILD pyaudio-0.2.4.ebuild 665 SHA256 e95ffdfe744f823b51fd72412c35d4a861ea8c333fa99b25ee24dcdd403d10f7 SHA512 2d0adadf6344c6c95e20ab1e742d8c0f0841e32e09469243434e7b27724e4e794183df9d1dd7da6145fb4e92c775824ae5a08b7424c055062635c81c710ea525 WHIRLPOOL 0d078be9eadfee2f2402a60794f8d9c3713cade336e1ea2564e57bd038907e451d54a747ec8f696439bd773b238cdbcda37d9f9bfb37b916ed0b99e8355d07ef
 EBUILD pyaudio-0.2.6.ebuild 666 SHA256 cac9f1621ba7e905e0b28b77014032e23bf002202d3b32eb68267a488e373262 SHA512 0b7b4dd0c889de7216066827c830dc7abbfeffea21c951d0a3db8f1c36cbc4f171d123a4f6502d38337dc603963573c30ab1acc89838068a09b18c5c8841cb13 WHIRLPOOL 0667ea7b3e9d0d519fa0f733158dc0f322b6d68d871f921e1b678e816375c025c133765899264484f31b87fdf0a36d67482dadd5672c3eaf5fbeac5b4a8d9764
 EBUILD pyaudio-0.2.7-r1.ebuild 703 SHA256 8e4ad90d4e0c530d87320c41dee50dd179c9a0340d3fa26cc02e1c0c6aa68598 SHA512 37dd8729b2b86bf4a77a38d5386e5547342f315c5542e49c1876a4536911b1cc2e33ca7039229e8393208f9ef4247ff4448a58e010f904a57569d2d71c9cd056 WHIRLPOOL 90504cd782acea60367f82e03c803d0bc8e5cd17de816ca5839a8c046f5ab462a0681401642f904d28c983ae10c2cf81c45053372cb4dc6362e5d63d0e8c4dfe
 EBUILD pyaudio-0.2.7.ebuild 748 SHA256 b56b0f6d308eaf0d5a8f24879fa7e91c646e8747de7a23bd46cce857cda710ff SHA512 0c02bf7e91558f23530dc411f3a79c3ad45fbdd45348ce84fc055c20f72c3edd5f3a824cd0ab8657e31c3705379f4e1296dc1bd585e77ef634f4ebdc6870f905 WHIRLPOOL d4342f38bb41a3a9e4b856c8d8a8746cda90e01dcfbebd735a329ef519b358a89d3928329c6f79e0858c83edb5a919a2dae55bdb812b62c6071ccc52560f173a
-MISC ChangeLog 2134 SHA256 82a1edc3e00e0b35897cb4882594e4802d08ac1ab1facee0d117b7e0402d46b8 SHA512 4a6e702c24c7456eebff369d1b48850f12a3e186f223e4a37ab68be9bef0458b138b3019f350a4865071cc4fa88d042dedb5c17e3e60da6a8f61acd709d37722 WHIRLPOOL 6708cc7985f874c55c39e92711d410b72e51803343bafb14d9f5a579a249a93eb69e896f57919c40a5ce71d2467c6d0872711906aea54217780bea28ca3684c7
+EBUILD pyaudio-0.2.8.ebuild 700 SHA256 dd28c41b4ba3becc5f1705fbc2acf90d1d9a5d1a4741d95c691d82e39f45e5bb SHA512 e3fc20f4f318168f72e15ae073bfce1a546907c1f677906da278e8c5bad86d5ece2ed0143ec9f72ada020f6f819160469265bc6a5ef28afcf52a0b58258b6d16 WHIRLPOOL 74a7afe473586952d0ab84e2d13388472ae45aff4e93051bbf38950eb624da0a7f8cea441fda3a81a9f75023155915498b38ef52bd37cbc88e4a5e7a9d1f5680
+MISC ChangeLog 2286 SHA256 e308803b3c2326295c285d068d6633448fc009522557505515b2d9e002eda550 SHA512 02123d1e07295b8da9987067ae81bca55331243b83108ff3e9da3a90d9174a294b3823a0bdc509013ff2aea3cffbe1378731cbf5098eae676324a4abb492a046 WHIRLPOOL ab764d74ff8d62bd27761acc7b8bd81cd5769411e8790f27dfdbce172b0dab12a25af489395c85aee8e72a92fb0863394f5495ac1cc5a3bbf92dc3341819f191
 MISC metadata.xml 322 SHA256 8fb471054b4aa4893d57719f0cd86d9e74779ee9944e9ba415d31b390367ec66 SHA512 33212373e31ca09eac97c61a99f56061de2b038aa979269eeb1dd027b324d64f335786199138ede0d4f88d87294d228edf0f9ae78043e910a3602006ee0c1085 WHIRLPOOL ae3cfdbc5815e1a894acf1023f12fac8d826f91c76fcfa08035034ea6e8568e40c3b960b6152a862f5b01306b97ca52e68b7f90794982fae6b7d4001e0e89916
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlMVFDMACgkQCaWpQKGI+9QS3ACeLUkczaRBx/OoKGh4j3vJT7QX
-pJ0AnjAC/0/9UcL9YoGCK23gNJGlQJQW
-=Ye6M
+iEYEAREIAAYFAlN0KrkACgkQso7CE7gHKw3dCACfWR5xFxYX/1DPJtYVDvirUjve
+xC0AoKW4atCrGaR5zv4Sm8wjYt7a3+Vq
+=2fle
 -----END PGP SIGNATURE-----
